crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@application_context_argument_order_changes_the_interface_fingerprint-2.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type app)\ntype app 'f 'a 'b = App ('f 'b 'a)\n\nmodule Main exposing (..)\nimport Types exposing (type app)\n"
---
{
    "Main": [],
    "Types": [
        Type {
            name: "app",
            constructors_exposed: false,
            kind: "(Type -> Type -> Type) -> Type -> Type -> Type",
        },
    ],
}
