crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@exported_alias_representation_changes_the_interface_fingerprint-2.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type item)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias item = unit -> unit\n\nmodule Main exposing (..)\n\nimport Types exposing (type item)\n\nf : item -> item\nf x = x\n"
---
{
    "Main": [
        Value {
            name: "f",
        },
    ],
    "Types": [
        Type {
            name: "item",
            constructors_exposed: false,
            kind: "Type",
        },
    ],
}
