crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@exported_datatype_context_changes_the_interface_fingerprint-2.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type box)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype box 'a = Box (list 'a)\n\nmodule Main exposing (..)\n\nimport Types exposing (type box)\n"
---
{
    "Main": [],
    "Types": [
        Type {
            name: "box",
            constructors_exposed: false,
            kind: "Type -> Type",
        },
    ],
}
