crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@imported_partial_heads_enforce_supplied_and_remaining_contexts-3.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type wrap)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype wrap 'f 'a = Wrap ('f 'a)\n\nmodule Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Types exposing (type wrap)\ntype option 'a = None | Some 'a\ntype use = Use (wrap (pair int) (option int))\n"
---
nash::names::representation_mismatch

  × This position requires `Storable` in field 1 of little constructor `Use` in
  │ `use`:
   ╭─[/Main.nash:6:34]
 5 │ type option 'a = None | Some 'a
 6 │ type use = Use (wrap (pair int) (option int))
   ·                                  ──────────
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
