crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@imported_partial_heads_enforce_supplied_and_remaining_contexts.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type wrap)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype wrap 'f 'a = Wrap ('f 'a)\n\nmodule Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Types exposing (type wrap)\ntype option 'a = None | Some 'a\ntype use = Use (wrap (pair int) bytes)\n"
---
{
    "Main": [
        Type {
            name: "option",
            constructors_exposed: true,
            kind: "Type -> Type",
        },
        Type {
            name: "use",
            constructors_exposed: true,
            kind: "Type",
        },
    ],
    "Types": [
        Type {
            name: "wrap",
            constructors_exposed: false,
            kind: "(Type -> Type) -> Type -> Type",
        },
    ],
}
