crates/nash-driver/src/snapshots/nash_driver__compile__kind_tests__compile_pair@imported_term_alias_is_rejected_as_a_list_element.snap
---
source: crates/nash-driver/src/compile.rs
description: "module Types exposing (type item)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\n\ntype alias item = unit -> unit\n\nmodule Main exposing (..)\n\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Types exposing (type item)\n\ntype alias items = list item\n"
---
nash::names::representation_mismatch

  × This position requires `Storable` in the lowercase name of alias `items`:
   ╭─[/Main.nash:6:1]
 5 │ import Types exposing (type item)
 6 │ 
   · ─
 7 │ type alias items = list item
   ╰────
  help: The type has `Term` representation, but `Storable` admits Big or Const types.
        Change the type or the representation requirement.
